# fitbit-dify-app

./: .env.example  .gitignore  README.md
ECG EDA/: .gitignore  DATASET_NOTE.md  ECG_EDA_WESAD_emotion_tutorial.ipynb  README.md  WESAD_LOSO_window_comparison_teaching.ipynb  WESAD_project_full_walkthrough.ipynb  engproc-27-00047.txt  pyproject.toml
ECG EDA/artifacts/wesad_experiments/: best_tree_feature_importance.csv  feature_table.csv  loso_results.json  loso_summary.csv  random_split_results.json  random_split_summary.csv
ECG EDA/artifacts/wesad_experiments_expanded_10_5/: baseline_vs_expanded_summary.csv  best_tree_feature_importance.csv  loso_results.json  loso_summary.csv  random_split_results.json  random_split_summary.csv
ECG EDA/artifacts/wesad_experiments_expanded_60_30/: baseline_vs_expanded_summary.csv  best_tree_feature_importance.csv  feature_table.csv  loso_results.json  loso_summary.csv  random_split_results.json  random_split_summary.csv
ECG EDA/artifacts/wesad_experiments_w10_s5/: best_tree_feature_importance.csv  feature_table.csv  loso_results.json  loso_summary.csv  random_split_results.json  random_split_summary.csv
ECG EDA/artifacts/wesad_experiments_w30_s15/: best_tree_feature_importance.csv  feature_table.csv  loso_results.json  loso_summary.csv  random_split_results.json  (+1 more)
ECG EDA/dify/: chatflow_blueprint.md  sample_consult_packet.json  workflow_blueprint.md
ECG EDA/docs/: WESAD_S2_quest_guide.md
ECG EDA/scripts/: generate_teaching_notebook.py  run_demo.py  train_wesad.py
ECG EDA/tests/: test_experiments.py  test_pipeline.py
(+116 files in other folders)
