[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anxiety-monitor-v0"
version = "0.1.0"
description = "V0 backend for ECG/EDA/temperature anxiety risk estimation with Dify-ready consultation packets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

